--- a/support.html
+++ b/support.html
@@ -60,11 +60,11 @@
     <div class="contact-info">
         Contact us via email:
         <br><br>
-        <a href="mailto:??support-email@example.com??">??support-email@example.com??</a>
+        <a href="mailto:ralph.schnalzenberger@gmail.com??">??support-email@example.com??</a>
     </div>
 
     <p style="margin-top: 30px; font-size: 14px; color: #666;">
-        Developed by **??Developer Name??**.
+        Developed by Ralph Schnalzenberger.
     </p>
 </div>
 
