Update contact email in support.html

--- a/support.html
+++ b/support.html
@@ -60,7 +60,7 @@
     <div class="contact-info">
         Contact us via email:
         <br><br>
-        <a href="mailto:ralph.schnalzenberger@gmail.com??">??support-email@example.com??</a>
+        <a href="mailto:ralph.schnalzenberger@gmail.com??">ralph.schnalzenberger@gmail.com</a>
     </div>
 
     <p style="margin-top: 30px; font-size: 14px; color: #666;">
